# dost-phil-onion-watch

./: .dockerignore  .gitignore  .markdownlint-cli2.yaml  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/api/: .env.example  alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260306_0001_initial.py  20260306_0002_forecast_model_registry.py  20260306_0003_anomaly_threshold_configs.py  20260306_0004_document_ingestion_queue.py  20260306_0005_report_distribution.py  20260306_0006_oidc_auth_controls.py  20260306_0007_observability_job_correlation.py  20260306_0008_mobile_sync_provenance.py  20260306_0009_geospatial_surveillance_tables.py  20260307_0010_geospatial_backlog_expansion.py  20260308_0011_geospatial_playbooks.py  20260309_0012_job_runs_bootstrap_repair.py
apps/api/app/: main.py
apps/api/app/core/: __init__.py  config.py  database.py  logging.py  middleware.py  openapi.py  rbac.py  security.py
apps/api/app/jobs/: __init__.py  alert_refresh.py  geospatial_ingest.py  geospatial_refresh.py  monthly_pipeline.py  reindex_documents.py  report_generation.py  worker.py
apps/api/app/models/: __init__.py  entities.py  enums.py
apps/api/app/schemas/: __init__.py  admin.py  alerts.py  anomaly.py  audit.py  auth.py  common.py  connectors.py  dashboard.py  documents.py  domain.py  forecasting.py  geospatial.py  geospatial_playbooks.py  mobile_sync.py  reports.py
apps/api/app/services/: alert_service.py  anomaly_service.py  audit_service.py  auth_service.py  dashboard_service.py  (+27 more)
(+128 files in other folders)
