[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phil-onion-watch-api"
version = "0.1.0"
description = "DOST Phil Onion Watch backend API"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]
filterwarnings = [
  "ignore:Too few observations to estimate starting parameters for seasonal ARMA.*:UserWarning",
  "ignore:urllib3 .* doesn't match a supported version!:requests.exceptions.RequestsDependencyWarning",
]
